// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInputAddress - snapshots TextInputAddress disabled without label 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "display": "flex",
        "marginTop": 10,
        "padding": 10,
      }
    }
  >
    <View
      style={
        {
          "borderColor": "#c3c3c3",
          "borderRadius": 5,
          "borderWidth": 1,
          "marginTop": 5,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="text translated"
          accessible={true}
          style={
            {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <TextInput
            editable={false}
            onChangeText={[Function]}
            placeholder="text translated"
            placeholderTextColor="#888888"
            style={
              {
                "backgroundColor": "transparent",
                "color": "#c3c3c3",
                "fontSize": 14,
                "fontWeight": "600",
                "marginLeft": 5,
              }
            }
            testID="send.addressplaceholder"
            value=""
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            accessibilityLabel="text translated"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="send.scan-button"
          >
            <
              color="#ffffff"
              icon={
                {
                  "icon": [
                    448,
                    512,
                    [],
                    "f029",
                    "M64 160l64 0 0-64-64 0 0 64zM0 80C0 53.5 21.5 32 48 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48L0 80zM64 416l64 0 0-64-64 0 0 64zM0 336c0-26.5 21.5-48 48-48l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96zM320 96l0 64 64 0 0-64-64 0zM304 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96c0-26.5 21.5-48 48-48zM288 352a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm0 64c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm96 32c0-17.7 14.3-32 32-32s32 14.3 32 32-14.3 32-32 32-32-14.3-32-32zm32-96a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm-32 32a32 32 0 1 1 -64 0 32 32 0 1 1 64 0z",
                  ],
                  "iconName": "qrcode",
                  "prefix": "fas",
                }
              }
              size={35}
              style={
                {
                  "marginRight": 5,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TextInputAddress - snapshots TextInputAddress empty, enabled, with label 1`] = `
<View
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "display": "flex",
        "marginTop": 10,
        "padding": 10,
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          {
            "color": "#c3c3c3",
            "fontSize": 15,
            "fontWeight": "400",
            "opacity": 1,
          }
        }
      >
        text translated
      </Text>
    </View>
    <View
      style={
        {
          "borderColor": "#c3c3c3",
          "borderRadius": 5,
          "borderWidth": 1,
          "marginTop": 5,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="text translated"
          accessible={true}
          style={
            {
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <TextInput
            editable={true}
            onChangeText={[Function]}
            placeholder="text translated"
            placeholderTextColor="#888888"
            style={
              {
                "backgroundColor": "transparent",
                "color": "#c3c3c3",
                "fontSize": 14,
                "fontWeight": "600",
                "marginLeft": 5,
              }
            }
            testID="send.addressplaceholder"
            value=""
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            accessibilityLabel="text translated"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="send.scan-button"
          >
            <
              color="#ffffff"
              icon={
                {
                  "icon": [
                    448,
                    512,
                    [],
                    "f029",
                    "M64 160l64 0 0-64-64 0 0 64zM0 80C0 53.5 21.5 32 48 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48L0 80zM64 416l64 0 0-64-64 0 0 64zM0 336c0-26.5 21.5-48 48-48l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96zM320 96l0 64 64 0 0-64-64 0zM304 32l96 0c26.5 0 48 21.5 48 48l0 96c0 26.5-21.5 48-48 48l-96 0c-26.5 0-48-21.5-48-48l0-96c0-26.5 21.5-48 48-48zM288 352a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm0 64c17.7 0 32 14.3 32 32s-14.3 32-32 32-32-14.3-32-32 14.3-32 32-32zm96 32c0-17.7 14.3-32 32-32s32 14.3 32 32-14.3 32-32 32-32-14.3-32-32zm32-96a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm-32 32a32 32 0 1 1 -64 0 32 32 0 1 1 64 0z",
                  ],
                  "iconName": "qrcode",
                  "prefix": "fas",
                }
              }
              size={35}
              style={
                {
                  "marginRight": 5,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
